--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
@@ -32,6 +33,9 @@
         }
     },
     "scripts": {
+        "test": [
+            "phpunit --stop-on-error --stop-on-defect --stop-on-failure --colors"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
